# Hardware-and-Virtualisation-24-25

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  gpio.rs  main.rs  memory.x  output.elf  output.hex  setup.sh  tmp.rs  tp1.code-workspace
.cargo/: config.toml
.devcontainer/: devcontainer.json
examples/: gpio.rs  i2c.rs  spi.rs  test.py  usart.rs
renode/: i2c.resc  stm32f103.repl  stm32f103.resc  usart.resc
src/: atmega328p.rs  auto.rs  cortex_m3.rs  gpio.rs  hal.rs  i2c.rs  lib.rs  main.rs  memory_map.rs  rcc.rs  spi.rs  timers.rs  usart.rs
src/atmega328p/: gpio.rs  usart.rs
src/auto/: usart.rs
src/cortex_m3/: usart.rs
src/gpio/: atmega328p.rs  cortex_m3.rs  stm32f1.rs
src/gpio/cortex_m3/: memory_map.rs
src/i2c/: atmega328p.rs  stm32f1.rs
src/memory_map/: stm32f.rs  stm32f1.rs
src/rcc/: stm32f1.rs
src/spi/: atmega328p.rs  stm32f1.rs
src/usart/: atmega328p.rs  cortex_m3.rs  stm32f1.rs
