[package]
name = "tp1"
authors = ["David Mordi, Ines Kaci, Louis-Marie Matthews"]
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "1.0.0"

[profile.release]
panic = "abort"
codegen-units = 1 # Slower compilation, faster program
lto = true # Maximum linker optimisation
opt-level = "s" # Optimize code for smallest binary size

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"
